# pcl

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  workshop-guide.md
.circleci/: config.yaml
.github/workflows/: ci.yml  release.yml  rust-base.yml  rust.yml
crates/common/: Cargo.toml
crates/common/src/: args.rs  lib.rs  utils.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: assertion_da.rs  assertion_submission.rs  auth.rs  config.rs  error.rs  lib.rs  project.rs
crates/core/tests/: da_store_int_tests.rs  dapp_submit_int_tests.rs
crates/core/tests/common/: da_store_harness.rs  dapp_submit_harness.rs  mod.rs
crates/da/: Cargo.toml
crates/da/src/: submit.rs
crates/dapp-api-client/: Cargo.toml  README.md  build.rs
crates/dapp-api-client/examples/: api_usage.rs  full_demo.rs  test_client.rs  test_env.rs
crates/dapp-api-client/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs
crates/dapp-api-client/tests/: auth_tests.rs  integration_auth_tests.rs
crates/dapp-api-client/tests/common/: mod.rs
crates/pcl/cli/: Cargo.toml  build.rs
crates/pcl/cli/src/: cli.rs  main.rs
crates/pcl/cli/tests/: auth_output.rs
crates/pcl/common/: Cargo.toml
crates/pcl/common/src/: args.rs  lib.rs  utils.rs
crates/pcl/core/: Cargo.toml
crates/pcl/core/src/: api.rs  apply.rs  auth.rs  client.rs  config.rs  credible_config.rs  diff.rs  download.rs  error.rs  lib.rs  request_log.rs  surface.rs  verify.rs
crates/pcl/core/src/api/: tests.rs
crates/pcl/phoundry/: Cargo.toml
crates/pcl/phoundry/src/: build.rs  build_and_flatten.rs  compile.rs  error.rs  lib.rs
crates/phoundry/: Cargo.toml
crates/phoundry/src/: build.rs  build_and_flatten.rs  compile.rs  error.rs  lib.rs  phorge.rs  phorge_test.rs  test.rs
crates/sp1/: Cargo.toml  build.rs
crates/sp1/client/: Cargo.toml  main.rs
crates/sp1/client/src/: main.rs
crates/sp1/host/: Cargo.toml  build.rs
crates/sp1/host/src/: config.rs  errors.rs  lib.rs
pclup/: install  pclup
scripts/: agent-smoke.sh
testdata/: MockAssertion.json  MockAssertionFlat.sol  forge-build-output.json
testdata/mock-protocol/: .gitignore  foundry.toml  remappings.txt
testdata/mock-protocol/assertions/src/: MockAssertion.sol  MockAssertionFlat.sol  NoArgsAssertion.a.sol  OwnableAssertion.sol  PriceFeedAssertion.a.sol  PriceFeedAssertion.sol  SafeBybitHackAssertion.sol  SimpleLendingAssertion.a.sol  SimpleLendingAssertion.sol
testdata/mock-protocol/assertions/test/: Increment.t.sol  MockAssertion.t.sol  OwnableAssertion.t.sol  PriceFeedAssertion.t.sol  SimpleLendingAssertion.t.sol
testdata/mock-protocol/cache/: solidity-files-cache.json
testdata/mock-protocol/script/: Deploy.sol
testdata/mock-protocol/src/: Ownable.sol  SimpleLending.sol  protocol.sol
