[workspace]
members = [
  "bin/pcl", 
  "crates/phoundry",
  "crates/common",
  "crates/core"
]
default-members = ["bin/pcl"]
resolver = '2'
exclude = [".github", "phoundry/"]


[workspace.package]
version = "0.0.1"
authors = ["Phylax Systems"]
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-only"
repository = "https://github.com/phylaxsystems/pcl"


[workspace.dependencies]
pcl-phoundry = { path = "crates/phoundry" }
pcl-common = { path = "crates/common" }
pcl-core= { path = "crates/core" }
tokio = { version = "1.39.0", features = ["full"] }
clap = { version = "4.5.23", features = ["derive", "env", "cargo"] }
color-eyre = "0.6"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0"

serde = { version = "1.0.2", features = ["derive"] }
serde_json = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }

colored = "3"

tempfile = "3"
tempdir = "0.3"
