[package]
name = "pcl-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.6.0"