[package]
name = "cl-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
alloy.workspace = true
alloy-primitives.workspace = true