[package]
name = "pcl-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
# PCL deps
pcl-common = { workspace = true }
pcl-phoundry = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
alloy-primitives = { version = "0.8.21", features = ["serde"] }
inquire = "0.7.5"
toml = "0.8.2"
dirs = "6.0.0"
eyre = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
colored = "2.0"
indicatif = "0.17"
assertion-da-client = { git = "ssh://git@github.com/phylaxsystems/assertion-da.git", branch = "feat/source-code"}

[dev-dependencies]
mockito = "1.2"
tempfile = "3.6.0"
