[package]
name = "pcl-phoundry"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
# PCL deps
pcl-common = { workspace = true }

# Foundry deps
forge = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "54e1fb3" }
foundry-config= { git = "https://github.com/phylaxsystems/phoundry.git", rev = "54e1fb3" }
foundry-cli = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "54e1fb3" }
# forge = { path = "../../../phoundry/crates/forge"}
# foundry-config= { path = "../../../phoundry/crates/config"}
# foundry-cli = { path = "../../../phoundry/crates/cli"}
foundry-compilers = { version = "0.14.0", default-features = false }

clap = { workspace = true }
thiserror = { workspace = true }
hex = "0.4.3"

serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tempfile = { workspace = true }
tempdir = {workspace = true}
tokio = { workspace = true }

[dev-dependencies]