[package]
name = "pcl-phoundry"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
# PCL deps
pcl-common = { workspace = true }

# Foundry deps
forge = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "2875888" }
foundry-config = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "2875888" }
foundry-cli = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "2875888" }
foundry-common = { git = "https://github.com/phylaxsystems/phoundry.git", rev = "2875888" }
foundry-compilers = { version = "0.14.0", default-features = false }

clap = { workspace = true }
thiserror = { workspace = true }
hex = "0.4.3"

serde = { workspace = true }
serde_json = { workspace = true }
color-eyre = { workspace = true }
tempfile = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true }
alloy-json-abi = "0.8.13"

[dev-dependencies]
