[package]
name = "cl-sp1"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
clap.workspace = true

# workspace
sp1-cc-host-executor = { git = "https://github.com/succinctlabs/sp1-contract-call", branch = "main" }
sp1-cc-client-executor = { git = "https://github.com/succinctlabs/sp1-contract-call", branch = "main" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-macro.workspace = true
alloy-provider.workspace = true

# Alloy host dependencies
alloy.workspace = true

# misc:
url.workspace = true
tokio.workspace = true
eyre.workspace = true
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true

# sp1
sp1-sdk = "3.2.0"


[build-dependencies]
sp1-helper = "3.2.0"


[features]
default = []
cuda = ["sp1-sdk/cuda"]