[package]
name = "pcl"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

build = "build.rs"

[dependencies]
pcl-phoundry = { workspace = true }
pcl-core = { workspace = true }
pcl-common = { workspace = true }
serde_json = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
credible = ["pcl-phoundry/credible", "pcl-core/credible"]
full = ["credible"]

[build-dependencies]
vergen-gix = { version = "9", features = ["build", "cargo", "rustc", "si"] }
anyhow = "1"
